// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge request summary note component renders review note 1`] = `
"<div>
  <article class=\\"gl-rounded-base gl-border gl-mb-4\\">
    <header class=\\"gl-display-flex gl-justify-content-space-between gl-p-4\\">
      <h5 class=\\"gl-m-0\\">Merge request change summary</h5>
      <time-ago-tooltip-stub time=\\"created-at\\" tooltipplacement=\\"top\\" cssclass=\\"\\" datetimeformat=\\"DATE_WITH_TIME_FORMAT\\" class=\\"gl-white-space-nowrap gl-font-sm gl-text-gray-600\\"></time-ago-tooltip-stub>
    </header>
    <div class=\\"gl-px-4 gl-mb-4\\">
      <p class=\\"gl-m-0\\">
        AI content
      </p>
    </div>
    <footer class=\\"gl--flex-center gl-border-t gl-px-4 gl-py-3\\">
      <user-feedback-stub eventname=\\"proposed_changes_summary\\" promptlocation=\\"\\" size=\\"small\\" category=\\"tertiary\\" icononly=\\"true\\" eventextradata=\\"[object Object]\\"></user-feedback-stub>
      <div class=\\"gl-ml-auto\\">
        <gl-link-stub target=\\"_blank\\" href=\\"https://gitlab.com/gitlab-org/gitlab/-/issues/408726\\">
          Leave feedback
        </gl-link-stub>
      </div>
    </footer>
  </article>
  <summary-note-stub summary=\\"[object Object]\\" type=\\"review_summary\\"></summary-note-stub>
</div>"
`;

exports[`Merge request summary note component renders summary note 1`] = `
"<div>
  <article class=\\"gl-rounded-base gl-border gl-mb-4\\">
    <header class=\\"gl-display-flex gl-justify-content-space-between gl-p-4\\">
      <h5 class=\\"gl-m-0\\">Merge request change summary</h5>
      <time-ago-tooltip-stub time=\\"created-at\\" tooltipplacement=\\"top\\" cssclass=\\"\\" datetimeformat=\\"DATE_WITH_TIME_FORMAT\\" class=\\"gl-white-space-nowrap gl-font-sm gl-text-gray-600\\"></time-ago-tooltip-stub>
    </header>
    <div class=\\"gl-px-4 gl-mb-4\\">
      <p class=\\"gl-m-0\\">
        AI content
      </p>
    </div>
    <footer class=\\"gl--flex-center gl-border-t gl-px-4 gl-py-3\\">
      <user-feedback-stub eventname=\\"proposed_changes_summary\\" promptlocation=\\"\\" size=\\"small\\" category=\\"tertiary\\" icononly=\\"true\\" eventextradata=\\"[object Object]\\"></user-feedback-stub>
      <div class=\\"gl-ml-auto\\">
        <gl-link-stub target=\\"_blank\\" href=\\"https://gitlab.com/gitlab-org/gitlab/-/issues/408726\\">
          Leave feedback
        </gl-link-stub>
      </div>
    </footer>
  </article>
</div>"
`;
